[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["chanon-mike <zzmikezz8520@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.99.1"
pydantic = {extras = ["dotenv"], version = "^1.10.12"}
uvicorn = "^0.23.2"
pyjwt = "^2.8.0"
cryptography = "^3.4.7"
openai = "^1.1.0"
mangum = "^0.17.0"
json5 = "^0.9.14"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 88

[tool.black]
line-length = 88
target-version = ['py39']
